<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".MalePhrases">
    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maleText"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:id="@+id/welcome"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/todayImage"
                android:id="@+id/todayImage"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/randomImage"
                android:id="@+id/randomImage"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>